Fix Book Now button mobile version

--- a/src/components/appointment/Appointment.css
+++ b/src/components/appointment/Appointment.css
@@ -4,11 +4,11 @@
   background-image: url('../../background.jpg');
   background-size: cover;
   background-position: center;
-  height: 100vh;
+ 
   display: flex;
   align-items: center;
   position: relative;
-  z-index: 1;
+  z-index: -12;
 }
 
 .appointment {
@@ -77,6 +77,7 @@
 @media (max-width: 768px) {
   .appointment-content {
     padding: 10px;
+    z-index: 2;
   }
 
   .appointment-content h2 {
